# sproutaitest

./: Makefile  README.md  backlog-cron  ingestion.Dockerfile  mlapi.Dockerfile  pyproject.toml  rationale.md  setup.cfg
mlapi/: flask_server.py
sproutaitest/: manage.py
sproutaitest/modelingestion/: apps.py  models.py  views.py
sproutaitest/modelingestion/factories/: model_factory.py
sproutaitest/modelingestion/interfaces/: exceptions.py
sproutaitest/modelingestion/management/commands/: clear_backlog.py
sproutaitest/modelingestion/mlengine/: endpoint.py  processor.py
sproutaitest/modelingestion/request/: models.py
sproutaitest/modelingestion/tests/: test_blogpost_listing.py  test_ingestion.py  test_response_processing.py
sproutaitest/sproutaitest/: settings.py  urls.py  wsgi.py
sproutaitest/sproutlaitest/: asgi.py  settings.py  urls.py
sproutlaitest/: manage.py
sproutlaitest/modelingestion/: models.py
sproutlaitest/modelingestion/interfaces/: mlendpoint.py
sproutlaitest/modelingestion/migrations/: 0001_initial.py
sproutlaitest/modelingestion/mlengine/: endpoint.py  processor.py
sproutlaitest/modelingestion/request/: models.py
sproutlaitest/sproutlaitest/: asgi.py  settings.py  urls.py  wsgi.py
